<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="io.summa.tutorial.view.LicenceTestActivity">

    <LinearLayout
        android:id="@+id/llContentHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llNavigationHolder"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/counter_text"/>

            <TextView
                android:id="@+id/tvAnsweredCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/answered_correct"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tvTitle"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="Placeholder question"/>

        <ImageView
            android:id="@+id/ivTitleImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAnswers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavigationHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/previous"
            style="@style/Widget.AppCompat.Button.Colored"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.AppCompat.Button.Colored"

            android:text="@string/next"/>
    </LinearLayout>
</RelativeLayout>


